--- a/style.css
+++ b/style.css
@@ -236,7 +236,7 @@ nav ul li a:hover {
 /* Maxwidth 1024 */
 @media screen and (max-width: 1024px) {
   .hero {
-    grid-template-columns: auto(1fr);
+    grid-template-columns: 1fr;
     text-align: center;
   }
 
